improvements on hw dependencies

--- a/sketches/Makefile
+++ b/sketches/Makefile
@@ -2,13 +2,13 @@
 BUILD_DIR=obj
 
 # where to find Wiring sources
-WIRING_SRC_DIR=/media/picuntu/linuxdata/Wiring
+WIRING_SRC_DIR=$(HOME)/dev/Wiring
 
 # ETL template library for avr
-ETL_ROOT=/media/picuntu/linuxdata/ETL
+ETL_ROOT=$(HOME)/dev/ETL
 
 # where to find personal sketches
-SKETCHES=/media/picuntu/linuxdata/TiPiDuino/sketches
+SKETCHES=$(HOME)/dev/TiPiDuino/sketches
 
 # default board model
 FAMILY=Arduino
@@ -33,18 +33,19 @@ F_CPU=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | gr
 HARDWARE=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | grep "$(BOARD)\.build\.hardware"|cut -d'=' -f2)
 PROTOCOL=$(shell cat $(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/boards.txt | grep "$(BOARD)\.upload\.protocol"|cut -d'=' -f2)
 PART=$(shell $AVRDUDE -c $PROTOCOL 2>&1|grep -i atmega328p|tr -d ' '|cut -d'=' -f1)
+VARIANT=$(FAMILY)-$(BOARD)
 
 # Compile options
 MCU_FLAGS=-mmcu=$(MCU)
 COMMON_FLAGS=$(MCU_FLAGS) -DF_CPU=$(F_CPU)
-C_FLAGS=-O3 -Os -std=gnu11 $(COMMON_FLAGS)
-CXX_FLAGS=-O3 -Os -std=c++1y $(COMMON_FLAGS)
+C_FLAGS=-O3 -Os $(COMMON_FLAGS)
+CXX_FLAGS=-std=c++1y -O3 -Os $(COMMON_FLAGS)
 LD_FLAGS=-Os $(MCU_FLAGS)
 STRIP_FLAGS=-s -x -X
 OBJCOPY_ELF2HEX_FLAGS=-O ihex -R .eeprom
 
 # Wiring core and additional libraries
-WIRING_LIBNAME=Wiring-$(FAMILY)-$(BOARD)
+WIRING_LIBNAME=Wiring-$(VARIANT)
 WIRING_LIB=$(BUILD_DIR)/lib$(WIRING_LIBNAME).a
 WIRING_HW_DIR=$(WIRING_SRC_DIR)/framework/hardware/$(FAMILY)/$(HARDWARE)
 WIRING_CORE_DIR=$(WIRING_SRC_DIR)/framework/cores/$(CORE)
@@ -56,11 +57,11 @@ WIRING_SRC_CPP=$(shell find $(WIRING_DIRS) -name "*.cpp")
 WIRING_SRC_H=$(shell find $(WIRING_DIRS) -name "*.h")
 WIRING_INC_DIRS=$(sort $(dir $(WIRING_SRC_H)))
 WIRING_INC_FLAGS=$(addprefix -I,$(WIRING_INC_DIRS))
-WIRING_OBJS=$(subst $(WIRING_SRC_DIR),$(BUILD_DIR),$(patsubst %.c,%.wiring.o,$(WIRING_SRC_C)) $(patsubst %.cpp,%.wiring.o,$(WIRING_SRC_CPP)))
+WIRING_OBJS=$(subst $(WIRING_SRC_DIR),$(BUILD_DIR),$(patsubst %.c,%.wiring.$(VARIANT).o,$(WIRING_SRC_C)) $(patsubst %.cpp,%.wiring.$(VARIANT).o,$(WIRING_SRC_CPP)))
 WIRING_OBJS_DIRS=$(sort $(dir $(WIRING_OBJS)))
 
 # User libraries
-USER_LIBNAME=User-$(FAMILY)-$(BOARD)
+USER_LIBNAME=User-$(VARIANT)
 USER_LIB=$(BUILD_DIR)/lib$(USER_LIBNAME).a
 USER_LIBRARIES_DIR=$(SKETCHES)/libraries
 USER_LIBRARIES_SRC_C=$(shell find $(USER_LIBRARIES_DIR) -name "*.c")
@@ -68,7 +69,7 @@ USER_LIBRARIES_SRC_CPP=$(shell find $(USER_LIBRARIES_DIR) -name "*.cpp")
 USER_LIBRARIES_SRC_H=$(shell find $(USER_LIBRARIES_DIR) -name "*.h")
 USER_LIBRARIES_INC_DIRS=$(sort $(dir $(USER_LIBRARIES_SRC_H)))
 USER_LIBRARIES_INC_FLAGS=$(addprefix -I,$(USER_LIBRARIES_INC_DIRS))
-USER_LIBRARIES_OBJS=$(subst $(SKETCHES),$(BUILD_DIR),$(patsubst %.c,%.user.o,$(USER_LIBRARIES_SRC_C)) $(patsubst %.cpp,%.user.o,$(USER_LIBRARIES_SRC_CPP)))
+USER_LIBRARIES_OBJS=$(subst $(SKETCHES),$(BUILD_DIR),$(patsubst %.c,%.user.$(VARIANT).o,$(USER_LIBRARIES_SRC_C)) $(patsubst %.cpp,%.user.$(VARIANT).o,$(USER_LIBRARIES_SRC_CPP)))
 USER_LIBRARIES_OBJS_DIRS=$(sort $(dir $(USER_LIBRARIES_OBJS)))
 
 # Ambroise Leclerc's libstdc++ for AVRs
@@ -81,12 +82,14 @@ user: $(USER_LIB)
 %.flash: %.hex
 	$(AVRDUDE) -c $(PROTOCOL) -p $(MCU) -P $(SERIALPORT) -D -V -U flash:w:$<:i 
 
-%.hex: $(BUILD_DIR)/%.user.elf
+%.hex: $(BUILD_DIR)/%.sketch.$(VARIANT).strip.elf
 	$(OBJCOPY) $(OBJCOPY_ELF2HEX_FLAGS) $< $@
 
-$(BUILD_DIR)/%.user.elf: $(BUILD_DIR)/%.user.o $(USER_LIB) $(WIRING_LIB)
+$(BUILD_DIR)/%.sketch.$(VARIANT).strip.elf: $(BUILD_DIR)/%.sketch.$(VARIANT).elf
+	$(STRIP) $(STRIP_FLAGS) $< -o $@
+
+$(BUILD_DIR)/%.sketch.$(VARIANT).elf: $(BUILD_DIR)/%.sketch.$(VARIANT).o $(USER_LIB) $(WIRING_LIB)
 	$(CXX) $(LD_FLAGS) $< -L$(BUILD_DIR) -l$(USER_LIBNAME) -l$(WIRING_LIBNAME) -o $@
-	$(STRIP) $(STRIP_FLAGS) $@
 
 $(USER_LIB): $(USER_LIBRARIES_OBJS)
 	$(AR) rcs $@ $?
@@ -104,24 +107,30 @@ MakeWiringBuildDirs:
 MakeUserBuildDirs:
 	mkdir -p $(USER_LIBRARIES_OBJS_DIRS)
 
-$(BUILD_DIR)/%.wiring.o: $(WIRING_SRC_DIR)/%.c
+# compilation des sources wiring
+$(BUILD_DIR)/%.wiring.$(VARIANT).o: $(WIRING_SRC_DIR)/%.c
 	$(CC) $(C_FLAGS) $(WIRING_INC_FLAGS) -c $< -o $@
 
-$(BUILD_DIR)/%.wiring.o: $(WIRING_SRC_DIR)/%.cpp
+$(BUILD_DIR)/%.wiring.$(VARIANT).o: $(WIRING_SRC_DIR)/%.cpp
 	$(CXX) $(CXX_FLAGS) $(WIRING_INC_FLAGS) -c $< -o $@
 
-#$(BUILD_DIR)/%.wiring.o: $(WIRING_SRC_DIR)/%.pde
-#	$(CXX) $(CXX_FLAGS) -xc++ $(WIRING_INC_FLAGS) -c $< -o $@
-
-$(BUILD_DIR)/%.user.o: $(SKETCHES)/%.c
+# cmpilation des bibliothèques utilisateur
+$(BUILD_DIR)/libraries/%.user.$(VARIANT).o: $(USER_LIBRARIES_DIR)/%.c
 	$(CC) $(C_FLAGS) $(USER_LIBRARIES_INC_FLAGS) $(WIRING_INC_FLAGS) -c $< -o $@
 
-$(BUILD_DIR)/%.user.o: $(SKETCHES)/%.cpp
+$(BUILD_DIR)/libraries/%.user.$(VARIANT).o: $(USER_LIBRARIES_DIR)/%.cpp
+	$(CXX) $(CXX_FLAGS) $(USER_LIBRARIES_INC_FLAGS) $(WIRING_INC_FLAGS) -c $< -o $@
+
+# compilation des programmes
+$(BUILD_DIR)/%.sketch.$(VARIANT).o: $(SKETCHES)/%.c
+	$(CC) $(C_FLAGS) $(USER_LIBRARIES_INC_FLAGS) $(WIRING_INC_FLAGS) -c $< -o $@
+
+$(BUILD_DIR)/%.sketch.$(VARIANT).o: $(SKETCHES)/%.cpp
 	$(CXX) $(CXX_FLAGS) $(USER_LIBRARIES_INC_FLAGS) $(WIRING_INC_FLAGS) $(ETL_CXX_FLAGS) -c $< -o $@
 
-$(BUILD_DIR)/%.user.o: $(SKETCHES)/%.ino
-	$(CXX) $(CXX_FLAGS) -xc++ $(USER_LIBRARIES_INC_FLAGS) $(WIRING_INC_FLAGS) $(ETL_CXX_FLAGS) -c $< -o $@
+$(BUILD_DIR)/%.sketch.$(VARIANT).o: $(BUILD_DIR)/%.sketch.cpp
+	$(CXX) $(CXX_FLAGS) $(USER_LIBRARIES_INC_FLAGS) $(WIRING_INC_FLAGS) $(ETL_CXX_FLAGS) -c $< -o $@
 
-$(BUILD_DIR)/%.user.o: $(SKETCHES)/%.pde
-	$(CXX) $(CXX_FLAGS) -xc++ $(USER_LIBRARIES_INC_FLAGS) $(WIRING_INC_FLAGS) -c $< -o $@
-
+$(BUILD_DIR)/%.sketch.cpp: %.pde
+	echo "#include <Wiring.h>" > $@
+	cat $< >> $@
