constexpr objects are not stable enough in gcc 4.9.2, falling back to static members

--- a/sketches/Makefile
+++ b/sketches/Makefile
@@ -40,7 +40,7 @@ MCU_FLAGS=-mmcu=$(MCU)
 COMMON_FLAGS=$(MCU_FLAGS) -DF_CPU=$(F_CPU)
 C_FLAGS=-O3 -Os $(COMMON_FLAGS)
 CXX_FLAGS=-std=c++1y -O3 -Os $(COMMON_FLAGS)
-LD_FLAGS=-Os $(MCU_FLAGS)
+LD_FLAGS=-std=c++1y -Os $(MCU_FLAGS)
 STRIP_FLAGS=-s -x -X
 OBJCOPY_ELF2HEX_FLAGS=-O ihex -R .eeprom
 
