--- a/fleye/CMakeLists.txt
+++ b/fleye/CMakeLists.txt
@@ -1,28 +1,24 @@
+cmake_minimum_required (VERSION 2.8)
+project (Fleye)
 
-# raspistill/raspivid/raspiyuv
+# ./fleye -v -ex fixedfps -w 1296 -h 972 -p 0,0,648,486 --ccmd 4 --disptrack
 
-SET(COMPILE_DEFINITIONS -Werror)
+SET(COMPILE_DEFINITIONS "-Werror")
 
-set(RASPICAM_SOURCE_DIR "${PROJECT_SOURCE_DIR}/host_applications/linux/apps/raspicam" )
+SET(VCROOT "/opt/vc")
+SET(VCINC "${VCROOT}/include")
+SET(VCLIB "${VCROOT}/lib")
 
-include_directories(${PROJECT_SOURCE_DIR}/host_applications/linux/libs/bcm_host/include)
-include_directories("${RASPICAM_SOURCE_DIR}")
+include_directories(${VCINC} ${VCINC}/interface/vcos/pthreads ${VCINC}/interface/vmcs_host/linux)
+add_definitions(-DGLSL_SRC_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\" -pthread)
 
-add_definitions(-DGLSL_SRC_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\")
+link_directories(${VCLIB})
 
-set(RASPICAM_SOURCES
-   ${RASPICAM_SOURCE_DIR}/RaspiCamControl.c
-   ${RASPICAM_SOURCE_DIR}/RaspiCLI.c
-   ${RASPICAM_SOURCE_DIR}/RaspiPreview.c
-   ${RASPICAM_SOURCE_DIR}/RaspiTexUtil.c
-   ${RASPICAM_SOURCE_DIR}/tga.c
-)
-
-add_executable(fleye Fleye.c GPUTracking.c gl_tracking.c cpu_tracking.c ${RASPICAM_SOURCES} )
+add_executable(fleye Fleye.c gl_tracking.c cpu_tracking.c RaspiCamControl.c RaspiCLI.c RaspiPreview.c RaspiTex.c RaspiTexUtil.c )
 
 set (MMAL_LIBS mmal_core mmal_util mmal_vc_client)
 
-target_link_libraries(fleye ${MMAL_LIBS} vcos bcm_host GLESv2 EGL m)
+target_link_libraries(fleye ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m)
 
 install(TARGETS fleye RUNTIME DESTINATION bin)
 
