--- a/fleye/CMakeLists.txt
+++ b/fleye/CMakeLists.txt
@@ -2,23 +2,29 @@ cmake_minimum_required (VERSION 2.8)
 project (Fleye)
 
 # ./fleye -v -ex fixedfps -w 1296 -h 972 -p 0,0,648,486 --ccmd 4 --disptrack
+# 
+# 60+ fps configs
+# ./fleye -v -ex fixedfps -w 1296 -h 972 -p 0,0,384,256 --ccmd 5 --disptrack 
 
 SET(COMPILE_DEFINITIONS "-Werror")
 
 SET(VCROOT "/opt/vc")
 SET(VCINC "${VCROOT}/include")
 SET(VCLIB "${VCROOT}/lib")
+SET(BCM2835LIB "/usr/loca/lib")
 
 include_directories(${VCINC} ${VCINC}/interface/vcos/pthreads ${VCINC}/interface/vmcs_host/linux)
 add_definitions(-DGLSL_SRC_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\" -pthread)
 
-link_directories(${VCLIB})
+link_directories(${VCLIB} ${BCM2835LIB})
 
-add_executable(fleye Fleye.c gl_tracking.c cpu_tracking.c RaspiCamControl.c RaspiCLI.c RaspiPreview.c RaspiTex.c RaspiTexUtil.c )
+add_executable(fleye Fleye.c gl_tracking.c cpu_tracking.c RaspiCamControl.c RaspiCLI.c RaspiPreview.c RaspiTex.c RaspiTexUtil.c gpio.c)
+add_executable(test_gpio test_gpio.c gpio.c)
 
 set (MMAL_LIBS mmal_core mmal_util mmal_vc_client)
 
-target_link_libraries(fleye ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m)
+target_link_libraries(fleye ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m bcm2835)
+target_link_libraries(test_gpio bcm2835)
 
 install(TARGETS fleye RUNTIME DESTINATION bin)
 
