interoperable RPi/GPIO and atmega328

--- a/fleye/CMakeLists.txt
+++ b/fleye/CMakeLists.txt
@@ -18,13 +18,15 @@ add_definitions(-DGLSL_SRC_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\" -pthread)
 
 link_directories(${VCLIB} ${BCM2835LIB})
 
-add_executable(fleye Fleye.c gl_tracking.c cpu_tracking.c RaspiCamControl.c RaspiCLI.c RaspiPreview.c RaspiTex.c RaspiTexUtil.c gpio.c)
-add_executable(test_gpio test_gpio.c gpio.c)
+add_library(gpio gpio.c bcm2835.c)
+
+add_executable(fleye Fleye.c gl_tracking.c cpu_tracking.c RaspiCamControl.c RaspiCLI.c RaspiPreview.c RaspiTex.c RaspiTexUtil.c)
+add_executable(test_gpio test_gpio.c)
 
 set (MMAL_LIBS mmal_core mmal_util mmal_vc_client)
 
-target_link_libraries(fleye ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m bcm2835)
-target_link_libraries(test_gpio bcm2835)
+target_link_libraries(test_gpio gpio)
+target_link_libraries(fleye ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m gpio)
 
 install(TARGETS fleye RUNTIME DESTINATION bin)
 
