scripts working with automatic shader uniforms

--- a/fleye/CMakeLists.txt
+++ b/fleye/CMakeLists.txt
@@ -4,7 +4,7 @@ project (Fleye)
 # ./fleye -v -ex fixedfps -w 1296 -h 972 -p 0,0,648,486 --ccmd 4 --disptrack
 # 
 # 60+ fps configs
-# ./fleye -v -ex fixedfps -w 1296 -h 972 -p 0,0,384,256 --ccmd 5 --disptrack 
+# ./fleye -v -ex fixedfps -w 1296 -h 972 -p 0,0,384,256 --ccmd 5 --disptrack --script passthru
 
 SET(COMPILE_DEFINITIONS "-Werror")
 
@@ -23,12 +23,21 @@ target_link_libraries(fleye ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m dl)
 add_executable(test_gpio test_gpio.c thirdparty/bcm2835.c)
 
 # copy shader files
-file(GLOB GLSL_SOURCE_FILES "shaders/" "*.glsl")
+file(GLOB_RECURSE GLSL_SOURCE_FILES "*.glsl")
 foreach(GLSL_SRC ${GLSL_SOURCE_FILES})
 	get_filename_component(GLSL_SRC_NODIR ${GLSL_SRC} NAME)
 	message("copy ${GLSL_SRC} to ${CMAKE_CURRENT_BINARY_DIR}/${GLSL_SRC_NODIR}")
-	configure_file( shaders/${GLSL_SRC} ${CMAKE_CURRENT_BINARY_DIR}/${GLSL_SRC_NODIR} COPYONLY)
+	configure_file( ${GLSL_SRC} ${CMAKE_CURRENT_BINARY_DIR}/${GLSL_SRC_NODIR} COPYONLY)
 endforeach(GLSL_SRC)
+
+# copy scripts files
+file(GLOB_RECURSE SCRIPTS_FILES "*.fleye")
+foreach(SCRIPT ${SCRIPTS_FILES})
+	get_filename_component(SCRIPT_NODIR ${SCRIPT} NAME)
+	message("copy ${SCRIPT} to ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT_NODIR}")
+	configure_file( ${SCRIPT} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT_NODIR} COPYONLY)
+endforeach(SCRIPT)
+
 
 # compile plugin dynamic libraries
 file(GLOB PLUGIN_SOURCE_FILES "plugins/*.c")
