end of first refactoring phase

--- a/rpi2/fleye/CMakeLists.txt
+++ b/rpi2/fleye/CMakeLists.txt
@@ -44,7 +44,7 @@ install(TARGETS fleye RUNTIME DESTINATION bin)
 file(GLOB_RECURSE GLSL_SOURCE_FILES "*.glsl")
 foreach(GLSL_SRC ${GLSL_SOURCE_FILES})
 	get_filename_component(GLSL_SRC_NODIR ${GLSL_SRC} NAME)
-	message("copy ${GLSL_SRC} to ${CMAKE_CURRENT_BINARY_DIR}/${GLSL_SRC_NODIR}")
+	#message("copy ${GLSL_SRC} to ${CMAKE_CURRENT_BINARY_DIR}/${GLSL_SRC_NODIR}")
 	configure_file( ${GLSL_SRC} ${CMAKE_CURRENT_BINARY_DIR}/${GLSL_SRC_NODIR} COPYONLY)
 endforeach(GLSL_SRC)
 
@@ -52,7 +52,7 @@ endforeach(GLSL_SRC)
 file(GLOB_RECURSE SCRIPTS_FILES "*.fleye")
 foreach(SCRIPT ${SCRIPTS_FILES})
 	get_filename_component(SCRIPT_NODIR ${SCRIPT} NAME)
-	message("copy ${SCRIPT} to ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT_NODIR}")
+	#message("copy ${SCRIPT} to ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT_NODIR}")
 	configure_file( ${SCRIPT} ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT_NODIR} COPYONLY)
 endforeach(SCRIPT)
 
