--- a/rpi2/fleye/RaspiCore/CMakeLists.txt
+++ b/rpi2/fleye/RaspiCore/CMakeLists.txt
@@ -4,6 +4,7 @@ link_directories(${VCLIB})
 
 file(GLOB RASPICORE_SRC "*.c")
 add_executable(fleye ${RASPICORE_SRC})
-target_link_libraries(fleye FleyeModule thirdparty ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m dl)
+message("Json lib is ${jsoncpp_LIBRARIES}")
+target_link_libraries(fleye FleyeModule ${jsoncpp_LIBRARIES} thirdparty ${MMAL_LIBS} vcos bcm_host GLESv2 EGL pthread m dl)
 install(TARGETS fleye RUNTIME DESTINATION bin)
 
