first script converted to json

--- a/rpi2/fleye/scripts/CMakeLists.txt
+++ b/rpi2/fleye/scripts/CMakeLists.txt
@@ -1,5 +1,5 @@
 # copy scripts files
-file(GLOB_RECURSE SCRIPTS_FILES "*.fleye")
+file(GLOB_RECURSE SCRIPTS_FILES "*.json")
 foreach(SCRIPT ${SCRIPTS_FILES})
 	get_filename_component(SCRIPT_NODIR ${SCRIPT} NAME)
 	#message("copy ${SCRIPT} to ${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT_NODIR}")
